Revise repo's structure

--- a/Code/analysis.ipynb
+++ b/Code/analysis.ipynb
@@ -4,6 +4,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Deep Percolation Event Analysis and Visualization\n",
+    "\n",
+    "This Jupyter Notebook is designed to analyze and visualize deep percolation events in lysimeter data, incorporating meteorological and soil measurements. The analysis focuses on understanding the characteristics of these events, their seasonal variations, and the factors influencing percolation under different conditions.\n",
+    "\n",
+    "## Key Analyses and Visualizations\n",
+    "\n",
+    "1. **Warm vs. Cold Season Event Comparison:**\n",
+    "   * Identifies deep percolation events as \"warm\" or \"cold\" based on snow cover and temperature conditions.\n",
+    "   * Compares event characteristics (volume, duration, intensity) between warm and cold seasons using boxplots.\n",
+    "\n",
+    "2. **Correlation Analysis:**\n",
+    "   * Calculates Pearson and partial correlation coefficients between percolation event volume and various factors (water input, intensity index, soil moisture, soil temperature) for both warm and cold seasons.\n",
+    "   * Presents correlation results in a visually clear plot, highlighting significant relationships.\n",
+    "\n",
+    "3. **Event Volume and Duration Distributions:**\n",
+    "   * Generates histograms and kernel density estimates (KDEs) to visualize the distributions of percolation event volumes and durations.\n",
+    "   * Provides summary statistics (mean, median, standard deviation) for these distributions.\n",
+    "\n",
+    "4. **General and Seasonal Event Statistics:**\n",
+    "   * Reports key statistics (min, max, mean, median, coefficient of variation) for event volumes and durations.\n",
+    "   * Calculates seasonal averages for percolation volume, rainfall volume, and snowmelt contribution.\n",
+    "   * Presents seasonal variations in a bar plot, illustrating the relative importance of different water sources.\n",
+    "\n",
+    "5. **Detailed Event Visualization:**\n",
+    "   * Selects specific events of interest (e.g., Event-9, Event-47, Event-34).\n",
+    "   * Creates detailed time series plots for each selected event, showing:\n",
+    "      * Hourly rainfall, simulated water input, and snow depth.\n",
+    "      * Soil moisture and temperature at various depths.\n",
+    "      * Hourly percolation rates.\n",
+    "      * Air temperature.\n",
+    "\n",
+    "## Data Sources\n",
+    "\n",
+    "* **Lysimeter Data:** Hourly deep percolation measurements.\n",
+    "* **Meteorological Data:** Hourly and daily rainfall, snow depth, air temperature, etc.\n",
+    "* **Soil Data:** Half-hourly soil moisture, temperature, and suction.\n",
+    "* **SVS Output:** Simulated water input at the surface from the Soil-Vegetation-Snow (SVS) model.\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "* Python 3.x\n",
+    "* pandas\n",
+    "* NumPy\n",
+    "* SciPy\n",
+    "* pingouin (for statistical analysis)\n",
+    "* Matplotlib\n",
+    "* Seaborn\n",
+    "* Plotly\n",
+    "\n",
+    "## Usage\n",
+    "\n",
+    "1. **Data Preparation:** Ensure all data files are in the specified directories .\n",
+    "2. **Run the Notebook:** Execute the cells sequentially to perform the analysis and generate the visualizations.\n",
+    "3. **Interpret Results:** Examine the plots and statistics to gain insights into deep percolation events and their influencing factors.\n",
+    "\n",
+    "## Additional Notes\n",
+    "\n",
+    "* The notebook includes helper functions (`user_functions.py`) for data loading, calculations, and plotting.\n",
+    "* Some sections of the notebook focus on specific events and may require modification if you want to analyze different events.\n",
+    "* The visualizations are saved as PDF files.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Imports"
    ]
   },
@@ -23,7 +89,7 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "import user_functions as uf\n"
+    "import user_functions as uf"
    ]
   },
   {
@@ -43,12 +109,12 @@
     "# note that this repo does not contain the data, you need to download it from the dataverse\n",
     "# and provide the path to the data in the DATA_DIR\n",
     "DATA_DIR = Path(\n",
-    "    \"../data/\"\n",
+    "    \"../Data/\"\n",
     ")\n",
     "\n",
     "## this is the path to the dir where the lysimeter objects are saved (outputs from the other notebook)\n",
     "RESULT_DIR = Path(\n",
-    "    \"../results/\"\n",
+    "    \"../Data/Lysimeter_Objects/\"\n",
     ")\n",
     "\n",
     "\n",
@@ -70,7 +136,7 @@
     "    \"svs_waterinput\": DATA_DIR / Path(\"InputWater_SVSoutput_ensAve.csv\"),\n",
     "\n",
     "    # output dir for saving figures\n",
-    "    \"fig_dir\": Path(\"../figures/\"),\n",
+    "    \"fig_dir\": Path(\"../Figures/\"),\n",
     "}\n",
     "\n",
     "\n",
@@ -177,12 +243,6 @@
     "data_soil_suction[data_soil_suction['Reading'] < 0] = np.nan\n",
     "\n",
     "## correction\n",
-    "### 2021-05-29 9:00:00 to 10:00:00 set to na, for L1_1850mm_int_Suction_kPa\n",
-    "# data_soil_suction.loc[\n",
-    "#     data_soil_suction[\"Unique_label_\"] == \"L1_1850mm_int_Suction_kPa\",\n",
-    "# ].loc[\n",
-    "#     \"2021-05-29 09:00:00\":\"2021-05-29 10:00:00\", \"Reading\"\n",
-    "# ] = np.nan\n",
     "data_soil_suction.loc[\n",
     "    (data_soil_suction[\"Unique_label_\"] == \"L1_1850mm_int_Suction_kPa\") &\n",
     "    (data_soil_suction.index.get_level_values(0) >= \"2021-05-29 09:00:00\") &\n",
@@ -195,7 +255,9 @@
     "    (data_soil_suction.index.get_level_values(0) >= \"2021-05-07 10:00:00\") &\n",
     "    (data_soil_suction.index.get_level_values(0) <= \"2021-05-07 13:00:00\"),\n",
     "    \"Reading\"\n",
-    "] = np.nan"
+    "] = np.nan\n",
+    "\n",
+    "print(\"Data loaded successfully\")"
    ]
   },
   {
@@ -314,7 +376,9 @@
     "    \"surface75mm_antecedent_SoilTemp_celsius\"\n",
     "]\n",
     "percolation_events[num_cols] = percolation_events[num_cols].fillna(np.nan)\n",
-    "percolation_events[num_cols] = percolation_events[num_cols].astype(\"float64\")"
+    "percolation_events[num_cols] = percolation_events[num_cols].astype(\"float64\")\n",
+    "\n",
+    "print(\"Percolation events dataframe created successfully\")"
    ]
   },
   {
@@ -362,7 +426,9 @@
     "    percolation_events[\"snowcover_present_period_fraction\"] == 0.0, \"SVS_water_input_mm\"\n",
     "] = percolation_events.loc[\n",
     "    percolation_events[\"snowcover_present_period_fraction\"] == 0.0, \"rainfall_volume_mm\"\n",
-    "]"
+    "]\n",
+    "\n",
+    "print(\"SVS water input added to the percolation events dataframe\")"
    ]
   },
   {
@@ -411,7 +477,7 @@
     "\n",
     "# plot _________________________________________________________________________\n",
     "# constants\n",
-    "SAVE_PATH = paths[\"fig_dir\"] / \"boxplots.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / \"Manuscript1_WarmColdEvents_boxplots.pdf\"\n",
     "FIGSIZE = (22, 18)\n",
     "FONTSIZE = 45\n",
     "FONT_LEGEND = FONTSIZE - 12\n",
@@ -483,7 +549,7 @@
     "\n",
     "# save\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches='tight', dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches='tight', dpi=2000)\n",
     "plt.show()"
    ]
   },
@@ -573,7 +639,7 @@
     "# pd.concat([warm_pearson_r_percvolume_df, warm_partial_r_percvolume_df], axis=0)\n",
     "\n",
     "# plot _________________________________________________________________________\n",
-    "SAVE_PATH = paths[\"fig_dir\"] / \"correlation_BothGroupEvents.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / \"Manuscript1_correlation_BothGroupEvents.pdf\"\n",
     "FIGSIZE = (14, 14)\n",
     "FONTSIZE = 40\n",
     "FONT_LEGEND = FONTSIZE - 12\n",
@@ -622,17 +688,8 @@
     "ax[1].set_xticklabels(SHORT_NAMES, fontsize=FONT_LEGEND - 3, rotation=0, ha=\"center\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, dpi=1000, bbox_inches=\"tight\")\n",
+    "plt.savefig(SAVE_PATH, dpi=2000, bbox_inches=\"tight\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_soil_suction[\"Unique_label_\"].unique()"
    ]
   },
   {
@@ -648,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_PATH = paths[\"fig_dir\"] / \"events_vol_duration_hist.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / \"Manuscript1_events_vol_duration_hist.pdf\"\n",
     "fgsize = (25, 12)\n",
     "fontsize = 45\n",
     "fontsize_legend = fontsize - 6\n",
@@ -725,7 +782,7 @@
     "\n",
     "# save fig\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=2000)\n",
     "plt.show()"
    ]
   },
@@ -846,7 +903,7 @@
     "\n",
     "\n",
     "# constants\n",
-    "SAVE_PATH = paths[\"fig_dir\"] / \"barplot_seasonal_events.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / \"Manuscript1_barplot_seasonal_events.pdf\"\n",
     "FIGSIZE = (25, 12)\n",
     "FONTSIZE = 45\n",
     "FONT_LEGEND = FONTSIZE - 6\n",
@@ -898,7 +955,7 @@
     "\n",
     "# Save the figure\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH)\n",
+    "plt.savefig(SAVE_PATH, dpi=2000, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -916,7 +973,7 @@
    "outputs": [],
    "source": [
     "EVENT_ID = \"Event-9\"\n",
-    "SAVE_PATH = paths[\"fig_dir\"] / f\"{EVENT_ID}.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / f\"Manuscript1_{EVENT_ID}.pdf\"\n",
     "FIGSIZE = (19, 18)\n",
     "FONTSIZE = 37\n",
     "FONT_LEGEND = FONTSIZE - 6\n",
@@ -1081,7 +1138,7 @@
     "\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=2000)\n",
     "plt.show()"
    ]
   },
@@ -1098,7 +1155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_PATH = paths[\"fig_dir\"] / f\"Event47.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / f\"Manuscript1_Event47.pdf\"\n",
     "FIGSIZE = (19, 24)\n",
     "FONTSIZE = 39\n",
     "FONT_LEGEND = FONTSIZE - 6\n",
@@ -1234,7 +1291,7 @@
     "ax[2].set_ylim(10, 22)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=2000)\n",
     "plt.show()"
    ]
   },
@@ -1252,7 +1309,7 @@
    "outputs": [],
    "source": [
     "EVENT_ID = \"Event-34\"\n",
-    "SAVE_PATH = paths[\"fig_dir\"] / f\"{EVENT_ID}.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / f\"Manuscript1_{EVENT_ID}.pdf\"\n",
     "FIGSIZE = (19, 24)\n",
     "FONTSIZE = 39\n",
     "FONT_LEGEND = FONTSIZE - 6\n",
@@ -1459,7 +1516,7 @@
     "\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=2000)\n",
     "plt.show()"
    ]
   },
@@ -1477,7 +1534,7 @@
    "outputs": [],
    "source": [
     "EVENT_ID = \"Event-43\"\n",
-    "SAVE_PATH = paths[\"fig_dir\"] / f\"{EVENT_ID}.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / f\"Manuscript1_{EVENT_ID}.pdf\"\n",
     "FIGSIZE = (19, 24)\n",
     "FONTSIZE = 39\n",
     "FONT_LEGEND = FONTSIZE - 6\n",
@@ -1635,7 +1692,7 @@
     "ax[1].yaxis.labelpad = 5\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=2000)\n",
     "plt.show()"
    ]
   },
@@ -1652,7 +1709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAVE_PATH = paths[\"fig_dir\"] / f\"2020_summer_suction_L2L4.pdf\"\n",
+    "SAVE_PATH = paths[\"fig_dir\"] / f\"Manuscript1_2020_summer_suction_L2L4.pdf\"\n",
     "FIGSIZE = (19, 18)\n",
     "FONTSIZE = 39\n",
     "FONT_LEGEND = FONTSIZE - 6\n",
@@ -1780,7 +1837,7 @@
     "ax[2].yaxis.labelpad = 30\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=1000)\n",
+    "plt.savefig(SAVE_PATH, bbox_inches=\"tight\", dpi=2000)\n",
     "plt.show()"
    ]
   },
