--- a/Code/event_identification.ipynb
+++ b/Code/event_identification.ipynb
@@ -4,6 +4,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Deep Percolation Event Identification and Characterization\n",
+    "\n",
+    "This Jupyter Notebook is dedicated to the identification and initial characterization of deep percolation events within lysimeter data. It leverages hourly percolation measurements, meteorological data (rainfall, snow depth, temperature), and soil data (moisture, temperature) to detect deep percolation events.\n",
+    "\n",
+    "## Core Functionality\n",
+    "\n",
+    "1. **Data Loading and Preprocessing:**\n",
+    "   * Reads raw data from CSV and Parquet files.\n",
+    "   * Ensures consistent datetime indexing and handles missing values.\n",
+    "   * Selects relevant data for each lysimeter (L1, L2, L3, and L4).\n",
+    "\n",
+    "2. **LysimeterEvents Class:**\n",
+    "   * Introduces a custom `LysimeterEvents` class to encapsulate:\n",
+    "      * Hourly percolation time series.\n",
+    "      * Hourly rainfall time series.\n",
+    "      * Daily snow depth time series.\n",
+    "      * Soil moisture and temperature data.\n",
+    "   * Provides methods for:\n",
+    "      * Identifying deep percolation events based on thresholds and inter-event periods.\n",
+    "      * Identifying rainfall events associated with percolation.\n",
+    "      * Calculating snowmelt contributions.\n",
+    "      * Extracting antecedent soil conditions.\n",
+    "\n",
+    "3. **Event Identification and Characterization:**\n",
+    "   * Iterates through each lysimeter (L1-L4).\n",
+    "   * Creates a `LysimeterEvents` object for each lysimeter.\n",
+    "   * Applies event identification methods to detect percolation events.\n",
+    "   * Calculates event volumes, durations, peak intensities, and other characteristics.\n",
+    "   * Analyzes rainfall patterns and snowmelt contributions for each event.\n",
+    "   * Extracts antecedent soil moisture and temperature values.\n",
+    "\n",
+    "4. **Manual Data Curation:**\n",
+    "   * Allows for manual adjustments to antecedent soil moisture and temperature values based on visual inspection of the data.\n",
+    "   * This step is crucial for ensuring accuracy when automated methods might misinterpret edge cases.\n",
+    "\n",
+    "5. **Data Saving:**\n",
+    "   * Pickles (serializes) each `LysimeterEvents` object, storing the identified events and their attributes for further analysis in the `analysis.ipynb` notebook.\n",
+    "\n",
+    "## Outputs\n",
+    "\n",
+    "* **Pickle Files:**\n",
+    "   * `L1_events.pkl`, `L2_events.pkl`, `L3_events.pkl`, `L4_events.pkl`: These files contain the `LysimeterEvents` objects for each lysimeter, encapsulating all identified events and their characteristics.\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "* Python 3.x\n",
+    "* pandas\n",
+    "* NumPy\n",
+    "* `user_functions.py`: A custom module containing helper functions for data loading, calculations, and plotting.\n",
+    "\n",
+    "## Usage\n",
+    "\n",
+    "1. **Data Preparation:** Ensure the raw data files are in the correct directory.\n",
+    "2. **Run the Notebook:** Execute the cells sequentially. The notebook will process the data, identify events, and save the results as pickle files.\n",
+    "3. **Manual Verification (Optional):** The notebook provides a section for visually verifying and adjusting antecedent soil moisture/temperature values if needed.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# imports"
    ]
   },
@@ -20,83 +81,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0;31mInit signature:\u001b[0m\n",
-      "\u001b[0muf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLysimeterEvents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mpercolation_hourly_tseries\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mrainfall_hourly_tseries\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0msnowdepth_cm_daily_tseries\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0msoil_sensors_df\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDocstring:\u001b[0m     \n",
-      "This class represents a lysimeter where we store info about its percolation\n",
-      "events.\n",
-      "\n",
-      "Parameters\n",
-      "----------\n",
-      "percolation_hourly_tseries : pd.Series\n",
-      "    A pandas series containing hourly percolation data (mm/h).\n",
-      "\n",
-      "rainfall_hourly_tseries : pd.Series\n",
-      "    A pandas series containing hourly rainfall data (mm/h).\n",
-      "\n",
-      "snowdepth_cm_daily_tseries : pd.Series\n",
-      "    A pandas series containing daily snow depth data. Units MUST be cm.\n",
-      "\n",
-      "Attributes\n",
-      "----------\n",
-      "percolation_hourly_tseries : pd.Series\n",
-      "    A pandas series containing hourly percolation data.\n",
-      "\n",
-      "events_df : pd.DataFrame\n",
-      "    A pandas dataframe containing the events and their characteristics.\n",
-      "\n",
-      "rainfall_events_df : pd.DataFrame\n",
-      "    A pandas dataframe containing the rainfall events and their\n",
-      "\n",
-      "snow_events_df : pd.DataFrame\n",
-      "    A pandas dataframe containing the snow events and their characteristics.\n",
-      "\n",
-      "\n",
-      "Methods\n",
-      "-------\n",
-      "id_events(\n",
-      "    min_rate_mmh : float = 0.01, forward_window_length_h : int = 24*3,\n",
-      "    min_vol_mm : float = 2, verbose : bool = False\n",
-      "):\n",
-      "    Go through the percolation tseries and identify events based on the\n",
-      "    specified criteria. The identified events are stored in the events_df\n",
-      "    dataframe.\n",
-      "\n",
-      "id_rainfall_events(prewindow_h : int = 24):\n",
-      "    Go through the rainfall tseries and identify rainfall events associated\n",
-      "    with the percolation events. The identified rainfall events are stored\n",
-      "    in the rainfall_events_df dataframe.\n",
-      "\n",
-      "calculate_snow_melt(pre_window_days : int = 5, verbose : bool = False):\n",
-      "    Calculate the snow melt for each event based on the snow depth and\n",
-      "    snow density data.\n",
-      "\n",
-      "checks():\n",
-      "    Check the percolation tseries for any issues.\n",
-      "\u001b[0;31mFile:\u001b[0m           ~/Desktop/Work/Manuscripts/Efforts/DeepPercolation/codes/DeepPercolation_HP2024/scripts/user_functions.py\n",
-      "\u001b[0;31mType:\u001b[0m           type\n",
-      "\u001b[0;31mSubclasses:\u001b[0m     "
-     ]
-    }
-   ],
-   "source": [
-    "uf.LysimeterEvents?"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +100,7 @@
     "# note that this repo does not contain the data.\n",
     "# you need to download the data from the dataverse and provide the path to the data directory here\n",
     "DATA_DIR = Path(\n",
-    "    \"../data/\"\n",
+    "    \"../Data/\"\n",
     ")\n",
     "\n",
     "paths = {\n",
@@ -127,7 +111,7 @@
     "    \"data_soil_temp\": DATA_DIR / Path(\"FieldSoilTemperature_4Enclosures_4Lysimeters_201806_202210.parquet\"),\n",
     "\n",
     "    # this is where we save the Lysimeter objects, to be used in the analysis notebook\n",
-    "    \"save_dir\": Path(\"../results/\")\n",
+    "    \"save_dir\": Path(\"../Data/Lysimeter_Objects/\"),\n",
     "\n",
     "}\n",
     "\n",
@@ -146,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# read the data into pandas dataframes\n",
     "## csv files\n",
@@ -177,7 +169,9 @@
     "\n",
     "data_soil_moist = data_soil_moist.set_index(\"Date Time (UTC)\")\n",
     "data_soil_temp = data_soil_temp.set_index(\"Date Time (UTC)\")\n",
-    "data_meteo_hourly = data_meteo_hourly.set_index(\"Date Time (UTC)\")"
+    "data_meteo_hourly = data_meteo_hourly.set_index(\"Date Time (UTC)\")\n",
+    "\n",
+    "print(\"Data loaded successfully\")"
    ]
   },
   {
@@ -196,9 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lysimeter 1 events saved successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l1_percolation_tseries = data_percolation.loc[\n",
@@ -303,7 +305,9 @@
     "    l1_percolation_tseries, rainfall_tseries, snowdepth_tseries,\n",
     "    surface_soil_tseries, L1_events, events_df, rainfall_events_df,\n",
     "    snow_events_df, surface_soil_df\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(\"Lysimeter 1 events saved successfully\")"
    ]
   },
   {
@@ -315,9 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lysimeter 2 events saved successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l2_percolation_tseries = data_percolation.loc[\n",
@@ -418,7 +430,9 @@
     "    l2_percolation_tseries, rainfall_tseries, snowdepth_tseries,\n",
     "    surface_soil_tseries, L2_events, events_df, rainfall_events_df,\n",
     "    snow_events_df, surface_soil_df\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(\"Lysimeter 2 events saved successfully\")"
    ]
   },
   {
@@ -430,9 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lysimeter 3 events saved successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l3_percolation_tseries = data_percolation.loc[\n",
@@ -510,7 +532,9 @@
     "    l3_percolation_tseries, rainfall_tseries, snowdepth_tseries,\n",
     "    surface_soil_tseries, L3_events, events_df, rainfall_events_df,\n",
     "    snow_events_df, surface_soil_df\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(\"Lysimeter 3 events saved successfully\")"
    ]
   },
   {
@@ -522,9 +546,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lysimeter 4 events saved successfully\n"
+     ]
+    }
+   ],
    "source": [
     "# preparing the time-series needed to create the LysimeterEvents object\n",
     "l4_percolation_tseries = data_percolation.loc[\n",
@@ -609,7 +641,9 @@
     "    l4_percolation_tseries, rainfall_tseries, snowdepth_tseries,\n",
     "    surface_soil_tseries, L4_events, events_df, rainfall_events_df,\n",
     "    snow_events_df, surface_soil_df\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(\"Lysimeter 4 events saved successfully\")"
    ]
   },
   {
@@ -641,15 +675,6 @@
    "metadata": {},
    "source": [
     "## Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "L1_events"
    ]
   },
   {
@@ -747,13 +772,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
