--- a/Code/plot_results.ipynb
+++ b/Code/plot_results.ipynb
@@ -4,6 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Literature Search Trends Visualization\n",
+    "\n",
+    "This notebook analyzes and visualizes trends in published research related to percolation, runoff, and evapotranspiration (ET) over time.\n",
+    "\n",
+    "**Input Data:**\n",
+    "\n",
+    "* CSV files containing yearly article counts for each topic (e.g., Scopus search results).\n",
+    "\n",
+    "**Output:**\n",
+    "\n",
+    "* Line plot showing the number of articles published per year for each topic.\n",
+    "* Bar plot displaying the total article count for each topic.\n",
+    "\n",
+    "**Dependencies:**\n",
+    "\n",
+    "* pandas\n",
+    "* matplotlib\n",
+    "* seaborn\n",
+    "\n",
+    "**How to Use:**\n",
+    "\n",
+    "1. Make sure the CSV files are in the correct location (specified in the script).\n",
+    "2. Run the notebook cells in order.\n",
+    "3. The plots will be generated and displayed within the notebook, and the line plot will be saved as a PDF.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# imports"
    ]
   },
@@ -33,9 +63,11 @@
    "outputs": [],
    "source": [
     "paths = {\n",
-    "    \"percolation_search\": Path(\"./percolation_Scopus_results.csv\"),\n",
-    "    \"runoff_search\": Path(\"./runoff_Scopus_results.csv\"),\n",
-    "    \"et_search\": Path(\"./et_Scopus_results.csv\"),\n",
+    "    \"percolation_search\": Path(\"../Data/Lit_Review/percolation_Scopus_results.csv\"),\n",
+    "    \"runoff_search\": Path(\"../Data/Lit_Review/runoff_Scopus_results.csv\"),\n",
+    "    \"et_search\": Path(\"../Data/Lit_Review/et_Scopus_results.csv\"),\n",
+    "\n",
+    "    \"save_dir\": Path(\"../Figures/\")\n",
     "}\n",
     "\n",
     "# set plotting parameters\n",
@@ -121,7 +153,7 @@
     "# constants\n",
     "FIGSIZE = (14, 11)\n",
     "DPI = 1000\n",
-    "SAVE_PATH = \"./LitSearch_DpRunEt3.pdf\"\n",
+    "SAVE_PATH = paths[\"save_dir\"] / \"./Literature_Trends.pdf\"\n",
     "FONTSIZE = 37\n",
     "FONTSIZE_LEGEND = FONTSIZE - 12\n",
     "LINEWIDTH = 4\n",
